[project]
name = "openai-api-key-tester"
version = "0.1.0"
description = "A Python tool to test and validate OpenAI API keys, supporting multiple models and usage statistics"
requires-python = ">=3.7"
authors = [
    {name = "Replit Team", email = "team@replit.com"}
]
dependencies = [
    "openai>=1.53.0",
    "requests>=2.31.0"
]
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://replit.com"
Repository = "https://replit.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
openai-key-tester = "openai_api_key_tester:main"
openai-key-tester-gui = "openai_api_key_tester:gui"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_api_key_tester"]
